# Process this file with autoconf to produce a configure script.
AC_INIT(pbs/pbs_log.h)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(perdition-pbs, 0.0.0)

# Checks for programs.
AC_PROG_CXX
AC_PROG_AWK
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

# Checks for libraries.
# FIXME: Replace `main' with a function in `-ldb':
AC_CHECK_LIB([db], [db_create])
# FIXME: Replace `main' with a function in `-lpopt':
AC_CHECK_LIB([popt], [poptGetContext])
# FIXME: Replace `main' with a function in `-lvanessa_logger':
AC_CHECK_LIB([vanessa_logger], [vanessa_logger_change_max_priority])
# FIXME: Replace `main' with a function in `-lvanessa_socket':
AC_CHECK_LIB([vanessa_socket], [vanessa_socket_daemon_process])

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h locale.h stdlib.h string.h sys/time.h syslog.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_STRUCT_TM

# Checks for library functions.
AC_TYPE_SIGNAL
AC_FUNC_STRFTIME
AC_CHECK_FUNCS([localtime_r memset regcomp setenv setlocale strcasecmp strchr strerror])

######################################################################
# Dmalloc debugging

dmalloc_lib=""
AC_ARG_WITH(
  dmalloc,
  [  --with-dmalloc          Compile with dmalloc debugging  ],
  [ dmalloc_lib="-ldmalloc"
    AC_SUBST(dmalloc_lib)
    AC_DEFINE(WITH_DMALLOC, 1, Should we use DMALLOC) ],

)


AC_OUTPUT(Makefile pbs/Makefile INSTALL)
