######################################################################
# configure.in                                                May 2002
# Horms                                             horms@vergenet.net
#
# Perdition PBS
# Pop Before SMTP Tools
# Copyright (C) 2002 Horms
# 
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License as
# published by the Free Software Foundation; either version 2 of the
# License, or (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
# 02111-1307  USA
#
######################################################################/

# Process this file with autoconf to produce a configure script.
AC_INIT(pbs/pbs_log.h)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(perdition-pbs, 0.0.0)

# Checks for programs.
AC_PROG_CXX
AC_PROG_AWK
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

# Checks for libraries.
# FIXME: Replace `main' with a function in `-ldb':
AC_CHECK_LIB([db], [db_create])
# FIXME: Replace `main' with a function in `-lpopt':
AC_CHECK_LIB([popt], [poptGetContext])
# FIXME: Replace `main' with a function in `-lvanessa_logger':
AC_CHECK_LIB([vanessa_logger], [vanessa_logger_change_max_priority])
# FIXME: Replace `main' with a function in `-lvanessa_socket':
AC_CHECK_LIB([vanessa_socket], [vanessa_socket_daemon_process])

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h locale.h stdlib.h string.h sys/time.h syslog.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_STRUCT_TM

# Checks for library functions.
AC_TYPE_SIGNAL
AC_FUNC_STRFTIME
AC_CHECK_FUNCS([localtime_r memset regcomp setenv setlocale strcasecmp strchr strerror])

######################################################################
# Dmalloc debugging

dmalloc_lib=""
AC_ARG_WITH(
  dmalloc,
  [  --with-dmalloc          Compile with dmalloc debugging  ],
  [ dmalloc_lib="-ldmalloc"
    AC_SUBST(dmalloc_lib)
    AC_DEFINE(WITH_DMALLOC, 1, Should we use DMALLOC) ],

)

######################################################################
# User and Group to run as

AC_ARG_WITH(
  user,
  [  --with-user=USER        Run perdition-pbs as USER. [default=nobody]  ],
  [ perdition_user="$withval" ],
  [ perdition_user="nobody" ],
)
AC_DEFINE_UNQUOTED(WITH_USER, "$perdition_user", User to run perdition as )


AC_ARG_WITH(
  group,
  [  --with-group=GROUP      Run perdition-pbs as GROUP. [default=nobody]  ],
  [ perdition_group="$withval" ],
  [ perdition_group="nobody" ],
)
AC_DEFINE_UNQUOTED(WITH_GROUP, "$perdition_group", Group to run perdition
as )


AC_OUTPUT(
Makefile 
pbs/Makefile 
etc/Makefile 
etc/rc.d/Makefile 
etc/rc.d/perdition-pbs.debian
etc/rc.d/perdition-pbs.rh
debian/Makefile
INSTALL)
